Add revised chapter [logg-2]

--- a/book.tex
+++ b/book.tex
@@ -40,7 +40,7 @@
 %------------------------------------------------------------------------------
 
 % Use to test individual chapter
-%\fenicsinput{terrel}\end{fullwidth}\end{document}
+%\fenicsinput{logg-2}\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
 
 \input{chapters/intro/chapter.tex}
 \fenicsinput{langtangen}
