--- a/bibliography.bib
+++ b/bibliography.bib
@@ -372,7 +372,7 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   url = {http://www.fenics.org/ufc/}
 }
 
-@MANUAL{AlnaesA.Logg2009,
+@MANUAL{AlnaesLogg2009,
   title = {{UFL} Specification and User Manual},
   author = {M. S. Aln\ae{}s and A. Logg},
   year = {2009},
@@ -925,14 +925,17 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   url = {http://dx.doi.org/10.1007/s10237-010-0189-7}
 }
 
-@ARTICLE{Beazley2006,
-  author = {David M. Beazley},
-  title = {{SWIG} : An Easy to Use Tool for Integrating Scripting Languages
-	with {C} and {C}++},
-  journal = {presented at the 4th Annual Tcl/Tk Workshop, Monterey, CA},
-  year = {2006},
-  owner = {logg},
-  timestamp = {2009.06.06}
+@inproceedings{Beazley2006,
+ author = {Beazley, David M.},
+ title = {{SWIG}: {A}n easy to use tool for integrating scripting
+ languages with {C} and {C++}},
+ booktitle = {Proceedings of the 4th conference on USENIX Tcl/Tk
+ Workshop},
+ volume = {4},
+ year = {1996},
+ url = {http://portal.acm.org/citation.cfm?id=1267498.1267513},
+ publisher = {USENIX Association},
+ address = {Berkeley},
 }
 
 @BOOK{BeckerCareyOden1981,
@@ -998,10 +1001,10 @@ pages = {691}
 
 
 @MISC{BellOlsonSchroder2009,
-  author = {N. Bell and L. Olson and J. Schroder},
-  title = {PyAMG -- Algebraic multigrid solvers in Python},
-  year = {2009},
-  url = {http://code.google.com/p/pyamg/}
+  author = {W. N. Bell and L. N. Olson and J. Schroder},
+  title = {{PyAMG}: {A}lgebraic multigrid solvers in {P}ython},
+  year = {2011},
+  url = {http://www.pyamg.org}
 }
 
 @ARTICLE{BellinSalandinRinaldo1992,
@@ -3692,7 +3695,7 @@ Forum
 
 @article{Hansbo2000,
 author = "P. Hansbo",
-title = "A Crank-Nicolson type space-time finite element method for computing 
+title = "A Crank-Nicolson type space-time finite element method for computing
 on moving meshes",
 journal = "Journal of Computational Physics",
 volume = 159,
@@ -3801,7 +3804,7 @@ year = "1975"
 @book{Mccormick1995,
 author = "B. W. McCormick",
 title = "Aerodynamics, aeronautics and flight mechanics (2nd edition)",
-publisher = "John Wiley and sons", 
+publisher = "John Wiley and sons",
 year = "1995"
 }
 
@@ -9155,3 +9158,68 @@ pages={36-40}
 	year = {2008}
 }
 
+@MISC{www:cgal,
+  title = {Software package},
+  author = {CGAL},
+  url = {http://www.cgal.org},
+  key = {CGAL software package},
+}
+
+@MISC{www:meshbuilder,
+  title = {Software package},
+  author = {MeshBuilder},
+  url = {http://launchpad.net/meshbuilder},
+  key = {MeshBuilder software package},
+}
+
+@MISC{www:scotch,
+  title = {SCOTCH},
+  author = {Francois Pellegrini},
+  url = {http://www.labri.fr/perso/pelegrin/scotch},
+}
+
+@MISC{www:parmetis,
+  title = {Software package},
+  author = {ParMETIS},
+  url = {http://glaros.dtc.umn.edu/gkhome/metis/parmetis/overview},
+  key = {ParMETIS software package},
+}
+
+@MISC{www:ublas,
+  title = {Software package},
+  author = {uBLAS},
+  url = {http://www.boost.org/libs/numeric/ublas/doc/},
+  key = {uBLAS software package},
+}
+
+@MISC{www:mtl4,
+  title = {Software package},
+  author = {MTL4},
+  url = {http://www.mtl4.org},
+  key = {MTL4 software package},
+}
+
+@MISC{www:viper,
+  author = {Viper},
+  title = {Software package},
+  key = {Viper software package},
+  url = {https://launchpad.net/fenics-viper}
+}
+
+@UNPUBLISHED{www:paraview,
+  title = {Software package},
+  author = {{ParaView}},
+  url = {http://www.paraview.org}
+}
+
+@UNPUBLISHED{www:mayavi,
+  title = {Software package},
+  author = {{MayaVi2}},
+  url = {http://code.enthought.com/projects/mayavi/}
+}
+
+@UNPUBLISHED{www:pastix,
+  title = {Software package},
+  author = {PaStiX},
+  url = {http://pastix.gforge.inria.fr/}
+}
