--- a/book.tex
+++ b/book.tex
@@ -59,7 +59,7 @@
 
 \part{Implementation}
 
-%%%\fenicsinput{logg-2}
+\fenicsinput{logg-2}
 \fenicsinput{logg-1}
 \fenicsinput{kirby-3}
 \fenicsinput{kirby-2}
@@ -86,7 +86,7 @@
 %%%\fenicsinput{oelgaard-1}
 \fenicsinput{nikbakht}
 \fenicsinput{schroll}
-%\fenicsinput{vynnytska}
+\fenicsinput{vynnytska}
 \fenicsinput{hake}
 \fenicsinput{lezar}
 \fenicsinput{mardal-4}
