Minor adjustments in book.tex. Only missing a few chapters now.

--- a/book.tex
+++ b/book.tex
@@ -55,7 +55,6 @@
 \fenicsinput{oelgaard-2}
 \fenicsinput{kirby-8}
 \fenicsinput{kirby-4}
-%%%\fenicsinput{hoffman-4}
 
 \part{Implementation}
 
@@ -72,7 +71,7 @@
 
 \part{Applications}
 
-\fenicsinput{terrel}
+%\fenicsinput{terrel}
 \fenicsinput{kvs-1}
 \fenicsinput{mortensen}
 %\input{unfinished/hoffman-1/chapter.tex}
