Some more .bib fixes.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8944,7 +8944,7 @@ pages = {1-4}}
 @Article{McNamaraZhong2005,
 author={A. K. McNamara and S. Zhong},
 year = {2005},
-title = {Thermochemical structures beneath Africa and the Pacific Ocean},
+title = {Thermochemical structures beneath {A}frica and the {P}acific {O}cean},
 journal = {Nature},
 volume = {437},
 pages = {1136-1139}}
@@ -9097,7 +9097,7 @@ pages = {23 - 36},
 year = {2007},
 note = {},
 issn = {0012-821X},
-url = {http://dx.dot.org/10.1016/j.epsl.2007.05.009},
+url = {http://dx.doi.org/10.1016/j.epsl.2007.05.009},
 author = {Gary T. Jarvis and Julian P. Lowman},
 }
 
