Lot's of reference fixes.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -22,9 +22,8 @@
 }
 
 @book{SzaboBabuska1991,
- title={Finite element analysis},
+ title={Finite Element Analysis},
  author={Szab{\'o}, B. and Szab{\'o}, B.A. and Babus̆ka, I.},
- isbn={0471502731},
  year={1991},
  publisher={Wiley-Interscience}
 }
@@ -59,10 +58,11 @@
 }
 
 @book{Schwab1998,
- title={{p}-and {hp}-finite element methods: {T}heory and applications in solid and fluid mechanics},
+ title={{p}-and {hp}-Finite Element Methods: Theory and Applications in
+ Solid and Fluid Mechanics},
  author={Schwab, C.},
  year={1998},
- publisher={Oxford University Press, USA}
+ publisher={Oxford University Press}
 }
 
 @article{AinsworthCoyle2003,
@@ -159,7 +159,7 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
 }
 
 @book{Gray1897,
-  title={Anatomy, descriptive and surgical},
+  title={Anatomy, Descriptive and Surgical},
   author={Gray, H.},
   year={1897},
   publisher={Lea Brothers}
@@ -223,13 +223,12 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
 }
 
 @BOOK{SolinSegethDolevzel2004,
-  title = {Higher-order finite element methods},
+  title = {Higher-order Finite Element Methods},
   publisher = {Chapman \& Hall/CRC},
   year = {2004},
   author = {{\v{S}}ol{\'{\i}}n, Pavel and Segeth, Karel and Dole{\v{z}}el, Ivo},
   pages = {xxii+382},
   series = {Studies in Advanced Mathematics},
-  note = {With 1 CD-ROM (Windows, Macintosh, UNIX and LINUX)},
 }
 
 @ARTICLE{Abdul-RahmanKasper2008,
@@ -279,21 +278,16 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
 }
 
 @BOOK{AinsworthOden2000,
-  title = {A Posteriori Error Estimation in Finite Element Analysis},
+  title = {\emph{A Posteriori} Error Estimation in Finite Element Analysis},
   publisher = {Wiley and Sons},
   year = {2000},
-  author = {Mark Ainsworth and J. Tinsley Oden},
+  author = {M. Ainsworth and J. T. Oden},
   address = {New York},
-  copyowner = {logg, massing},
-  isbn = {0-471-29411-X},
-  keywords = {A Posteriori Error Estimation in Finite Element Analysis},
-  owner = {massing},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{AinsworthOden1997,
   author = {M. Ainsworth and J. T. Oden},
-  title = {A posteriori error estimation in finite element analysis},
+  title = {\emph{A posteriori} error estimation in finite element analysis},
   journal = {Comp. Meth. in Appl. Mech. and Engrg.},
   year = {1997},
   volume = {142},
@@ -304,7 +298,7 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
 
 @ARTICLE{AinsworthOden1993,
   author = {Ainsworth, M. and Oden, J. T.},
-  title = {A unified approach to a posteriori error estimation using element
+  title = {A unified approach to \emph{a posteriori} error estimation using element
 	residual methods},
   journal = {Numerische Mathematik},
   year = {1993},
@@ -897,7 +891,7 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
 }
 
 @BOOK{Batchelor1967,
-  title = {An introduction to fluid dynamics},
+  title = {An Introduction to Fluid Dynamics},
   publisher = {Cambridge University Press},
   year = {1967},
   author = {Batchelor, G. K.}
@@ -989,7 +983,8 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
 }
 
 @ARTICLE{BejiNadaoka1996,
- title = {A Formal Derivation and Numerical Modelling of the Improved {B}oussinesq Equations for Varying Depth},
+ title = {A Formal Derivation and Numerical Modelling of the Improved
+ {B}oussinesq Equations for Varying Depth},
  volume = {23},
  issn = {0029-8018},
  number = {8},
@@ -1081,7 +1076,7 @@ pages = {691}
 }
 
 @BOOK{BerghLofstrom1976,
-  title = {Interpolation spaces},
+  title = {Interpolation Spaces},
   publisher = {Springer-Verlag},
   year = {1976},
   author = {J. Bergh and J. L\"{o}fstr\"{o}m}
@@ -1290,11 +1285,10 @@ pages = {691}
 }
 
 @BOOK{Braess2007,
-  title = {Finite elements},
+  title = {Finite Elements},
   publisher = {Cambridge University Press},
   year = {2007},
   author = {Braess, Dietrich},
-  address = {Cambridge},
   edition = {Third},
   isbn = {978-0-521-70518-9}
 }
@@ -1742,8 +1736,7 @@ pages = {691}
 }
 
 @BOOK{CanutoHussainiQuarteroniEtAl2007,
-  title = {Spectral Methods, evolution to complex geometries and applications
-	to fluid dynamics},
+  title = {Spectral Methods},
   publisher = {Springer-Verlag, New York},
   year = {2007},
   author = {C. Canuto and M. Y. Hussaini and A. Quarteroni and T. A. Zang}
@@ -1967,7 +1960,7 @@ pages = {691}
 }
 
 @BOOK{Ciarlet2002,
-  title = {The finite element method for elliptic problems},
+  title = {The Finite Element Method for Elliptic Problems},
   publisher = {Society for Industrial and Applied Mathematics},
   year = {2002},
   author = {Ciarlet, Philippe G.},
@@ -3098,12 +3091,12 @@ pages = {691}
 }
 
 @BOOK{GolubVan1996,
-  title = {Matrix computations},
+  title = {Matrix Computations},
   publisher = {Johns Hopkins University Press},
   year = {1996},
   author = {Golub, Gene H. and Van Loan, Charles F.},
   series = {Johns Hopkins Studies in the Mathematical Sciences},
-  address = {Baltimore, MD},
+  address = {Baltimore},
   edition = {Third}
 }
 
@@ -3288,7 +3281,7 @@ pages = {691}
 }
 
 @BOOK{HairerWanner1991b,
-  title = {Solving ordinary differential equations. {II}},
+  title = {Solving Ordinary Differential Equations. {II}},
   publisher = {Springer-Verlag},
   year = {1991},
   author = {Hairer, E. and Wanner, G.},
@@ -3300,7 +3293,7 @@ pages = {691}
 
 @ARTICLE{HansboHansbo2002,
   author = {Hansbo, A. and Hansbo, P.},
-  title = {An unfitted finite element method, based on Nitsche's method, for
+  title = {An unfitted finite element method, based on {N}itsche's method, for
 	elliptic interface problems},
   journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {2002},
@@ -3803,8 +3796,9 @@ year = "1975"
 
 @book{Mccormick1995,
 author = "B. W. McCormick",
-title = "Aerodynamics, aeronautics and flight mechanics (2nd edition)",
+title = "Aerodynamics, Aeronautics and Flight Mechanics",
 publisher = "John Wiley and sons",
+edition = {second},
 year = "1995"
 }
 
@@ -3946,7 +3940,7 @@ year = "2006"
 }
 
 @BOOK{Holzapfel2000,
-  title = {Nonlinear solid mechanics: A continuum approach for engineering},
+  title = {Nonlinear Solid Mechanics: A Continuum Approach for Engineering},
   publisher = {John Wiley \& Sons},
   year = {2000},
   author = {G. A. Holzapfel}
@@ -4105,11 +4099,11 @@ year = "2006"
 }
 
 @BOOK{IIIBehieTrangenstein1988,
-  title = {Multiphase flow in porous media. Lecture notes in engineering},
+  title = {Multiphase Flow in Porous Media},
   publisher = {Springer},
   year = {1988},
   author = {M. B. Allen {III} and G. A. Behie and J. A. Trangenstein},
-  series = {Lecture notes in engineering}
+  series = {Lecture Notes in Engineering}
 }
 
 @ARTICLE{ImhofSharma2007,
@@ -4170,13 +4164,13 @@ year = "2006"
 
 @ARTICLE{IsaksenValen-SendstadMardalEtAl2008,
   author = {J. Isaksen and K. Valen-Sendstad and K.-A. Mardal and T. Ingebrigtsen},
-  title = {CFD simulations of aneurysms with varying degrees of coil},
+  title = {{CFD} simulations of aneurysms with varying degrees of coil},
   journal = {J Neurosurg.},
   year = {2008}
 }
 
 @BOOK{ItohPelosiSilvester1996,
-  title={{Finite Element Software for Microwave Engineering}},
+  title={Finite Element Software for Microwave Engineering},
   author={Itoh, T. and Silvester, P.P. and Pelosi, G.},
   isbn={0471126365},
   year={1996},
@@ -4419,8 +4413,8 @@ year = "2006"
 }
 
 @BOOK{Johnson1997,
-  title = {A modern introduction to the mathematical theory of water waves},
-  publisher = {Cambridge University Press},
+  title = {A Modern Introduction to the Mathematical Theory of Water Waves},
+  publisher = {Cabridge University Press},
   year = {1997},
   author = {Johnson, R. S.},
   series = {Cambridge Texts in Applied Mathematics},
@@ -4835,7 +4829,7 @@ year = "2006"
 }
 
 @BOOK{LaiSchumaker2007,
-  title = {Spline functions on triangulations},
+  title = {Spline Functions on Triangulations},
   publisher = {Cambridge University Press},
   year = {2007},
   author = {Lai, Ming-Jun and Schumaker, Larry L.},
@@ -4843,27 +4837,15 @@ year = "2006"
   pages = {xvi+592},
   series = {Encyclopedia of Mathematics and its Applications},
   address = {Cambridge},
-  isbn = {978-0-521-87592-9; 0-521-87592-7},
-  mrclass = {41-02 (41A15 41A63 65D05 65D07)},
-  mrnumber = {MR2355272 (2008i:41001)},
-  mrreviewer = {Peter Alfeld},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @BOOK{Lambert1991,
-  title = {Numerical methods for ordinary differential systems},
+  title = {Numerical Methods for Ordinary Differential Systems},
   publisher = {John Wiley \& Sons Ltd.},
   year = {1991},
   author = {Lambert, J. D.},
   pages = {x+293},
   address = {Chichester},
-  isbn = {0-471-92990-5},
-  mrclass = {65L05 (34A12 34A50 65-01)},
-  mrnumber = {MR1127425 (92i:65114)},
-  mrreviewer = {A. de Castro Brzezicki},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @ARTICLE{Landweber1951,
@@ -4950,7 +4932,8 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   publisher = {Springer},
   year = {2009},
   author = {H. P. Langtangen},
-  series = {Texts in Computational Science and Engineering, vol 6}
+  series = {Texts in Computational Science and Engineering},
+  volume = {6}
 }
 
 @BOOK{Langtangen2008,
@@ -4960,7 +4943,6 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   author = {Langtangen, Hans Petter},
   address = {Heidelberg},
   edition = {third},
-  isbn = {978-3-540-73915-9}
 }
 
 @BOOK{Langtangen2006,
@@ -4969,8 +4951,6 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   year = {2006},
   author = {H. P. Langtangen},
   edition = {second},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @BOOK{Langtangen2003,
@@ -6308,7 +6288,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{Monk2003,
-  title={{Finite Element Methods for Maxwell's Equations}},
+  title={Finite Element Methods for {M}axwell's Equations},
   author={Monk, P.},
   isbn={0198508883},
   year={2003},
@@ -6418,7 +6398,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   number = {5},
 }
 
-@BOOK{Nazarov2009,
+@misc{Nazarov2009,
   title = {An adaptive finite element method for the compressible Euler equations},
   year = {2009},
   author = {M. Nazarov},
@@ -6505,7 +6485,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @ARTICLE{Nwogu1993,
   author = {Nwogu, Okey},
-  title = {ALTERNATIVE FORM OF BOUSSINESQ EQUATIONS FOR NEARSHORE WAVE PROPAGATION},
+  title = {Alternative form of {B}oussinesq equations for nearshore wave propagation},
   journal = {Journal of Waterway, Port, Coastal, and Ocean Engineering},
   year = {1993},
   volume = {119},
@@ -6538,7 +6518,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 ﻿@BOOK{OdenDemkowicz1996,
-  title = {Applied functional analysis},
+  title = {Applied Functional Analysis},
   publisher = {CRC press},
   year = {1996},
   author = {Oden, J. T. and Demkowicz, L.}
@@ -6767,7 +6747,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{Panton1984,
-  title = {Incompressible flow},
+  title = {Incompressible Flow},
   publisher = {John Wiley \& Sons Inc},
   year = {1984},
   author = {Panton, R. L.}
@@ -7269,14 +7249,11 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{RoosStynesTobiska2008,
-  title = {Numerical methods for singularly perturbed differential equations:
-	convection-diffusion and flow problems},
+  title = {Numerical Methods for Singularly Perturbed Differential Equations:
+	Convection-Diffusion and Flow Problems},
   publisher = {Springer Verlag},
   year = {2008},
   author = {Roos, H. G. and Stynes, M. and Tobiska, L.},
-  copyowner = {massing},
-  owner = {massing},
-  timestamp = {2009.05.27}
 }
 
 @MISC{Rossum,
@@ -7364,10 +7341,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   volume = {13},
   pages = {887--904},
   number = {3},
-  note = {Iterative methods in numerical linear algebra (Copper Mountain, CO,
-	1990)},
-  coden = {SJMAEL},
-  issn = {0895-4798}
 }
 
 @BOOK{Saad2003,
@@ -7412,7 +7385,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{SagautDeckTerracol2006,
-  title = {Multiscale and multiresolution approaches in turbulence},
+  title = {Multiscale and Multiresolution Approaches in Turbulence},
   publisher = {Imperial College Press},
   year = {2006},
   author = {P. Sagaut and S. Deck and M. Terracol}
@@ -7675,7 +7648,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{SimoHughes1998,
-  title = {Computational {I}nelasticity},
+  title = {Computational Inelasticity},
   publisher = {Springer Verlag},
   year = {1998},
   author = {J. C. Simo and T. J. R. Hughes}
@@ -7824,7 +7797,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   volume = {113},
   pages = {469--489},
   number = {3},
-  month = {Mar},
   timestamp = {2009.06.06}
 }
 
@@ -7879,12 +7851,11 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{SundnesLinesCaiEtAl2006,
-  title = {Computing the electrical activity in the heart},
+  title = {Computing the Electrical Activity in the Heart},
   publisher = {Springer-Verlag},
   year = {2006},
   author = {J. Sundnes and G. T. Lines and X. Cai and B. F. Nielsen and K.-A.
 	Mardal and A. Tveito},
-  isbn = {3-540-33432-7 }
 }
 
 @ARTICLE{Sutter2005,
@@ -7992,7 +7963,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{Trefethen2006,
-  title = {Spectral methods in Matlab},
+  title = {Spectral Methods in Matlab},
   publisher = {Springer-Verlag, New York},
   year = {2006},
   author = {L. N. Trefethen}
@@ -8037,14 +8008,13 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   timestamp = {2009.06.08}
 }
 
-@MISC{Turek1996,
+@inproceedings{Turek1996,
   author = {S. Turek},
   title = {Recent Benchmark Computations of Laminar Flow Around a Cylinder},
   year = {1996},
-  text = {Turek, S.: Recent Benchmark Computations of Laminar Flow Around a
-	Cylinder, in Proc. 3rd World Conference in Applied Computational
-	Fluid Mechanics, Freiburg, 1996},
-  url = {citeseer.ist.psu.edu/article/turek96recent.html}
+  booktitle = {3rd World Conference in Applied Computational
+	Fluid Mechanics},
+  address = {Freiburg},
 }
 
 @INBOOK{Valen-SendstadLoggMardalEtAl2010,
@@ -8077,9 +8047,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   volume = {22},
   pages = {419--428},
   number = {5},
-  month = {July},
-  owner = {elezar},
-  timestamp = {2009.12.24}
 }
 
 @ARTICLE{VassilevskiWang1995,
@@ -8164,12 +8131,13 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @CONFERENCE{Verfurth1994,
   author = {Verf{\"u}rth, R.},
-  title = {A posteriori error estimation and adaptive mesh-refinement techniques},
-  booktitle = {Proceedings of the fifth international conference on Computational
-	and applied mathematics table of contents},
+  title = {\emph{A posteriori} error estimation and adaptive mesh-refinement techniques},
+  booktitle = {Proceedings of the Fifth International Conference on Computational
+	and Applied Mathematics},
   year = {1994},
   pages = {67--83},
-  organization = {Elsevier Science Publishers BV Amsterdam, The Netherlands, The Netherlands},
+  publisher = {Elsevier Science Publishers},
+  organization = {Amsterdam},
   owner = {logg},
   timestamp = {2009.06.06}
 }
@@ -8314,8 +8282,9 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @ARTICLE{WooLiu2004b,
   author = {S.-B. Woo  and P.L.-F. Liu},
-  title = {Finite Element Model for Modified {B}oussinesq Equations II: Applications to Nonlinear Harbor Oscillations},
-  journal = {Journal of Waterway, Port, Coastal and Ocean Engineering },
+  title = {Finite Element Model for Modified {B}oussinesq Equations {II}:
+  {A}pplications to Nonlinear Harbor Oscillations},
+  journal = {Journal of Waterway, Port, Coastal and Ocean Engineering},
   year = {2004},
   volume = {130},
   pages = {17-28},
@@ -8390,7 +8359,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{WeltyWicksWilson2001,
-  title = {Fundamentals of momentum, heat, and mass transfer},
+  title = {Fundamentals of Momentum, Heat, and Mass Transfer},
   publisher = {John Wiley \& Sons Inc},
   year = {2001},
   author = {Welty, J. R. and Wicks, C. E. and Wilson, R. E.}
@@ -8437,7 +8406,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{Whitham1974,
-  title = {Linear and nonlinear waves},
+  title = {Linear and Nonlinear Waves},
   publisher = {John Wiley \& Sons},
   year = {1974},
   author = {Whitham, G. B.},
@@ -8445,13 +8414,13 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @INPROCEEDINGS{WilbersLangtangenOdegaard2009,
-  author = {Wilbers, I. M. and Langtangen, H. P. and {\O}deg\aa rd, \AA.},
-  title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
+  author = {Wilbers, I. M. and Langtangen, H. P. and {\O}deg{\aa}rd, \A{A}.},
+  title = {{U}sing {C}ython to speed up numerical {P}ython programs},
   booktitle = {Proceedings of MekIT'09},
   year = {2009},
   editor = {B. Skallerud and H. I. Andersson},
   pages = {495-512},
-  organization = {NTNU},
+  organization = { Norwegian University of Science and Technology},
   publisher = {Tapir Academic Press},
   isbn = {978-82-519-2421-4}
 }
@@ -8462,7 +8431,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   year = {1994},
   author = {D. C. Wilcox},
   address = {La Ca\~{n}ada, California},
-  annote = {TURB-Review,http://www.dcwindustries.com/bookstore.htm?/books/192872910X}
 }
 
 @ARTICLE{Winther1980,
@@ -8604,14 +8572,14 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   month = {11},
   owner = {logg},
   timestamp = {2009.06.07},
-  url = {http://www.sciencedirect.com/science/article/B6V4F-4D8VFVK-1/2/f20de8fc8ea73d8c737a74816ea82726}
+  url = {http://dx.doi.org/10.1016/j.oceaneng.2004.03.010}
 }
 
 @BOOK{ ZhuCangellaris2006,
- title = {Multigrid finite elements methods for electromagnetic field modelling},
+ title = {Multigrid Finite Element Methods for Electromagnetic Field Modelling},
  publisher = {IEEE Press},
  year = {2006},
- author = {Yu Zhu and Andreas C. Cangellaris},
+ author = {Y. Zhu and A. C. Cangellaris},
  address = {New York}
 }
 
@@ -8681,10 +8649,10 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   url = {http://acts.nersc.gov/siloon/index.html}
 }
 
-@UNPUBLISHED{SIP,
-  title = {{SIP}; {P}ython extension module generator},
+@MISC{SIP,
+  title = {{SIP}: {P}ython extension module generator},
   url = {http://www.riverbankcomputing.com/software/sip/intro},
-  key = {SIP}
+  key = {{SIP}: {P}ython extension module generator}
 }
 
 @UNPUBLISHED{vmtk,
@@ -8703,8 +8671,8 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @UNPUBLISHED{www:cython,
-  title = {{Cython}: C-Extensions for {Python}},
-  key = {{Cython}: C-Extensions for {Python}},
+  title = {{Cython}: C-Extensions for {P}ython},
+  key = {{Cython}: C-Extensions for {P}ython},
   owner = {logg},
   timestamp = {2009.06.06},
   url = {http://cython.org}
@@ -9122,7 +9090,7 @@ pages={36-40}
 }
 
 @Article{MontagueKelloggManga1998,
-	title = {High Rayleigh number thermo-chemical models of a dense
+	title = {High {R}ayleigh number thermo-chemical models of a dense
 	boundary layer in {D''}},
 	author = {N. L. Montague and H. L. Kellogg and M. Manga},
 	journal = {Geophys. Res. Lett.},
@@ -9141,7 +9109,7 @@ pages={36-40}
 }
 
 
-@Book{ KennettBunge2008,
+@Book{KennettBunge2008,
 	title = {Geophysical Continua},
 	author = {B. L. N. Kennett and H.-P. Bunge},
 	publisher = {Cambridge University Press},
