--- a/book.tex
+++ b/book.tex
@@ -66,7 +66,7 @@
 \fenicsinput{alnes-3}
 \fenicsinput{alnes-2}
 \fenicsinput{alnes-1}
-%\input{unfinished/hoffman-2/chapter.tex}
+%fenicsinput{hoffman-2}
 \fenicsinput{mardal-2}
 
 \part{Applications}
@@ -74,7 +74,6 @@
 %\fenicsinput{terrel}
 \fenicsinput{kvs-1}
 \fenicsinput{mortensen}
-%\input{unfinished/hoffman-1/chapter.tex}
 %%%\fenicsinput{hoffman-1}
 \fenicsinput{selim}
 %%%\fenicsinput{shan}
