Work on author list

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -1,72 +1,138 @@
 \chapter*{List of Authors}
 
-\editornote{Include author affiliations here.}
+\emph{The following list of authors have contributed to this book.}
 
-\begin{itemize}
-\item
-  Aln{\ae}s, Martin S.
-\item
-  Davidson, David B.
-\item
-  Hake, Johan
-\item
-  Hentschel, Susanne
-\item
-  Hoffman, Johan
-\item
-  Jansson, Johan
-\item
-  Jansson, Niclas
-\item
-  Johnson, Claes
-\item
-  Kirby, Robert C.
-\item
-  Knepley, Matthew G.
-\item
-  Langtangen, Hans Petter
-\item
-  Lezar, Evan
-\item
-  Linge, Svein
-\item
-  Logg, Anders
-\item
-  Lopes, Nuno D.
-\item
-  L{\o}vgren, Emil Alf
-\item
-  Mardal, Kent-Andre
-\item
-  Nazarov, Murtazo
-\item
-  Nikbakht, Mehdi
-\item
-  \O{}lgaard, Kristian B.
-\item
-  Pereira, Pedro J. S.
-\item
-  Rognes, Marie E.
-\item
-  Schroll, Hans Joachim
-\item
-  Scott, L. Ridgway
-\item
-  Selim, Kristoffer
-\item
-  Shan, Xuming
-\item
-  Skavhaug, Ola
-\item
-  Sundnes, Joakim
-\item
-  Terrel, Andy R.
-\item
-  Trabucho, L.
-\item
-  Valen-Sendstad, Kristian
-\item
-  Wells, Garth N.
-\item
-  Wilbers, Ilmar M.
-\end{itemize}
+\vspace{1cm}
+
+\fenicsauthor{Martin Sandve Aln\ae{}s}{}{}{}{}
+
+\fenicsauthor{Stuart R. Clark}{}{}{}{}
+
+\fenicsauthor{David B. Davidson}{}{}{}{}
+
+\fenicsauthor{Rodrigo Vilela De Abreu}{}{}{}{}
+
+\fenicsauthor{Cem Degirmenci}{}{}{}{}
+
+\fenicsauthor{Johan Hake}{}{}{}{}
+
+\fenicsauthor{Johan Hoffman}{}{}{}{}
+
+\fenicsauthor{Johan Jansson}{}{}{}{}
+
+\fenicsauthor{Niclas Jansson}{}{}{}{}
+
+\fenicsauthor{Claes Johnson}{}{}{}{}
+
+\fenicsauthor{Robert C. Kirby}{}{}{}{}
+
+\fenicsauthor{Matthew G. Knepley}{}{}{}{}
+
+\fenicsauthor{Hans Petter Langtangen}{}{}{}{}
+
+\fenicsauthor{Evan Lezar}{}{}{}{}
+
+\fenicsauthor{Svein Linge}{}{}{}{}
+
+\fenicsauthor{Anders Logg}
+             {logg@simula.no}
+             {Center for Biomedical Computing at Simula Research Laboratory, Norway \\
+              Department of Informatics, University of Oslo, Norway}
+             {This work is supported by an Outstanding Young
+              Investigator grant from the Research Council of Norway,
+              NFR 180450. This work is also supported by a Center of
+              Excellence grant from the Research Council of Norway to
+              the Center for Biomedical Computing at Simula Research
+              Laboratory.}
+             {Chapters
+              \ref{chap:alnes-2}, \ref{chap:kirby-3}, \ref{chap:kirby-4},
+              \ref{chap:kirby-5}, \ref{chap:kirby-6}, \ref{chap:kirby-7},
+              \ref{chap:kirby-8}, \ref{chap:kvs-1}, \ref{chap:kvs-2},
+              \ref{chap:logg-1}, \ref{chap:logg-2}, \ref{chap:logg-3}}
+
+\fenicsauthor{Nuno D. Lopes}{}{}{}{}
+
+\fenicsauthor{Alf Emil L\o{}vgren}{}{}{}{}
+
+\fenicsauthor{Kent-Andre Mardal}
+             {kent-and@simula.no}
+             {Center for Biomedical Computing at Simula Research Laboratory, Norway \\
+              Department of Informatics, University of Oslo, Norway}
+             {This work is supported by a Center of Excellence grant
+              from the Research Council of Norway to the Center for
+              Biomedical Computing at Simula Research Laboratory.}
+             {Chapters
+              \ref{chap:alnes-1}, \ref{chap:alnes-2}, \ref{chap:alnes-3},
+              \ref{chap:hentschel}, \ref{chap:kirby-1}, \ref{chap:kvs-1},
+              \ref{chap:kvs-2}, \ref{chap:logg-3}, \ref{chap:mardal-2},
+              \ref{chap:mardal-4}, \ref{chap:mortensen}, \ref{chap:wilbers}}
+
+\fenicsauthor{Mikael Mortensen}{}{}{}{}
+
+\fenicsauthor{Harish Narayanan}{}{}{}{}
+
+\fenicsauthor{Murtazo Nazarov}{}{}{}{}
+
+\fenicsauthor{Mehdi Nikbakht}{}{}{}{}
+
+\fenicsauthor{Pedro Jorge Silva Pereira}{}{}{}{}
+
+\fenicsauthor{Johannes Ring}
+             {johannr@simula.no}
+             {Center for Biomedical Computing at Simula Research Laboratory, Norway}
+             {This work is supported by a Center of Excellence grant
+              from the Research Council of Norway to the Center for
+              Biomedical Computing at Simula Research Laboratory.}
+             {FEniCS packaging, buildbots, benchbots and build system}
+
+\fenicsauthor{Marie E. Rognes}
+             {meg@simula.no}
+             {Center for Biomedical Computing at Simula Research Laboratory, Norway}
+             {This work is supported by an Outstanding Young
+              Investigator grant from the Research Council of Norway,
+              NFR 180450. This work is also supported by a Center of
+              Excellence grant from the Research Council of Norway to
+              the Center for Biomedical Computing at Simula Research
+              Laboratory.}
+             {Chapters
+              \ref{chap:logg-1}, \ref{chap:kirby-6}, \ref{chap:rognes}, \ref{chap:vynnytska}}
+
+\fenicsauthor{Hans Joachim Schroll}{}{}{}{}
+
+\fenicsauthor{L. Ridgway Scott}{}{}{}{}
+
+\fenicsauthor{Kristoffer Selim}
+             {selim@simula.no}
+             {Center for Biomedical Computing at Simula Research Laboratory, Norway}
+             {This work is supported by an Outstanding Young
+              Investigator grant from the Research Council of Norway,
+              NFR 180450. This work is also supported by a Center of
+              Excellence grant from the Research Council of Norway to
+              the Center for Biomedical Computing at Simula Research
+              Laboratory.}
+             {Chapter \ref{chap:selim}}
+
+\fenicsauthor{Susanne St\o{}le-Hentschel}{}{}{}{}
+
+\fenicsauthor{Andy R. Terrel}{}{}{}{}
+
+\fenicsauthor{Lu{\'\i}s Trabucho}{}{}{}{}
+
+\fenicsauthor{Kristian Valen-Sendstad}
+             {kvs@simula.no}
+             {Simula School of Research and Innovation \\
+              Center for Biomedical Computing at Simula Research Laboratory, Norway}
+             {This work is supported by a Center of Excellence grant
+              from the Research Council of Norway to the Center for
+              Biomedical Computing at Simula Research Laboratory.}
+             {Chapters \ref{chap:kvs-1} and \ref{chap:kvs-1}}
+
+\fenicsauthor{Lyudmyla Vynnytska}{}{}{}{}
+
+\fenicsauthor{Garth N. Wells}{}{}{}{}
+
+\fenicsauthor{Ilmar M. Wilbers}{}{}{}{}
+
+\fenicsauthor{Xuming Shan}{}{}{}{}
+
+\fenicsauthor{Kristian B. \O{}lgaard}{}{}{}{}
