--- a/book.tex
+++ b/book.tex
@@ -38,9 +38,13 @@
 % Chapters
 
 %------------------------------------------------------------------------------
+% Testing, uncomment
 
-% Use to test individual chapter
-%\fenicsinput{logg-2}\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
+%\fenicsinput{logg-2}
+\input{backmatter/authors}
+\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
+
+%------------------------------------------------------------------------------
 
 \input{chapters/intro/chapter.tex}
 \fenicsinput{langtangen}
