Add affiliation for Langtangen and and uncomment testing of affiliations in main book.tex.

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -28,7 +28,15 @@
 
 \fenicsauthor{Matthew G. Knepley}{}{}{}{}
 
-\fenicsauthor{Hans Petter Langtangen}{}{}{}{}
+\fenicsauthor{Hans Petter Langtangen}
+             {hpl@simula.no}
+             {Center for Biomedical Computing at Simula Research Laboratory, Norway \\
+              Department of Informatics, University of Oslo, Norway}
+             {This work is also supported by a Center of Excellence
+              grant from the Research Council of Norway to the Center
+              for Biomedical Computing at Simula Research
+              Laboratory.}
+             {Chapter \ref{chap:langtangen}}
 
 \fenicsauthor{Evan Lezar}{}{}{}{}
 
