--- a/book.tex
+++ b/book.tex
@@ -41,8 +41,8 @@
 % Testing, uncomment
 
 %\fenicsinput{logg-2}
-\input{backmatter/authors}
-\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
+%\input{backmatter/authors}
+%\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
 
 %------------------------------------------------------------------------------
 
