Add affiliation for Harish

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -77,7 +77,16 @@
 
 \fenicsauthor{Mikael Mortensen}{}{}{}{}
 
-\fenicsauthor{Harish Narayanan}{}{}{}{}
+\fenicsauthor{Harish Narayanan}
+             {harish@simula.no}
+             {Center for Biomedical Computing at Simula Research Laboratory, Norway}
+             {This work is supported by an Outstanding Young
+              Investigator grant from the Research Council of Norway,
+              NFR 180450. This work is also supported by a Center of
+              Excellence grant from the Research Council of Norway to
+              the Center for Biomedical Computing at Simula Research
+              Laboratory.}
+             {Chapters \ref{chap:narayanan} and \ref{chap:kvs-1}}
 
 \fenicsauthor{Murtazo Nazarov}{}{}{}{}
 
