--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -137,10 +137,12 @@
 
 \fenicsauthor{Lyudmyla Vynnytska}{}{}{}{}
 
-\fenicsauthor{Garth N. Wells}{}{}{}{}
+\fenicsauthor{Garth N. Wells}
+             {gnw20@cam.ac.uk}
+             {Department of Enginering, University of Cambridge}
+             {}
+             {}
 
 \fenicsauthor{Ilmar M. Wilbers}{}{}{}{}
-
-\fenicsauthor{Xuming Shan}{}{}{}{}
 
 \fenicsauthor{Kristian B. \O{}lgaard}{}{}{}{}
