Add more author info and fix merge problem.

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -90,7 +90,15 @@
 
 \fenicsauthor{Murtazo Nazarov}{}{}{}{}
 
-\fenicsauthor{Mehdi Nikbakht}{}{}{}{}
+\fenicsauthor{Mehdi Nikbakht}
+             {m.nikbakht@tudelft.nl}
+             {Faculty of Civil Engineering and Geosciences,
+             Delft University of Technology, The Netherlands}
+             {Support from the Netherlands Technology Foundation STW,
+              the Netherlands Organisation for Scientiﬁc Research
+              and the Ministry of Public Works and Water Management is
+              gratefully acknowledged.}
+             {Chapter \ref{chap:nikbakht}}
 
 \fenicsauthor{Pedro Jorge Silva Pereira}{}{}{}{}
 
@@ -148,7 +156,7 @@
 
 \fenicsauthor{Garth N. Wells}
              {gnw20@cam.ac.uk}
-             {Department of Enginering, University of Cambridge}
+             {Department of Enginering, University of Cambridge, United Kingdom}
              {}
              {}
 
