--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -95,7 +95,7 @@
              {Faculty of Civil Engineering and Geosciences,
              Delft University of Technology, The Netherlands}
              {Support from the Netherlands Technology Foundation STW,
-              the Netherlands Organisation for Scientiﬁc Research
+              the Netherlands Organisation for Scientific Research
               and the Ministry of Public Works and Water Management is
               gratefully acknowledged.}
              {Chapter \ref{chap:nikbakht}}
