Add affiliations for Lezar and Davidson

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -8,7 +8,13 @@
 
 \fenicsauthor{Stuart R. Clark}{}{}{}{}
 
-\fenicsauthor{David B. Davidson}{}{}{}{}
+\fenicsauthor{David B. Davidson}
+             {davidson@sun.ac.za}
+             {Department of Electrical and Electronic Engineering, Stellenbosch University, South Africa}
+             {This work is supported by grants from the National Research
+              Foundation, South Africa, as well as the Centre for High Performance
+              Computing, South Africa as part of a flagship project.}
+             {Chapter \ref{chap:lezar}}
 
 \fenicsauthor{Rodrigo Vilela De Abreu}{}{}{}{}
 
@@ -38,7 +44,13 @@
               Laboratory.}
              {Chapter \ref{chap:langtangen}}
 
-\fenicsauthor{Evan Lezar}{}{}{}{}
+\fenicsauthor{Evan Lezar}
+             {mail@evanlezar.com}
+             {Department of Electrical and Electronic Engineering, Stellenbosch University, South Africa}
+             {This work is supported by grants from the National Research
+              Foundation, South Africa, as well as the Centre for High Performance
+              Computing, South Africa as part of a flagship project.}
+              {Chapter \ref{chap:lezar}}
 
 \fenicsauthor{Svein Linge}{}{}{}{}
 
