Add very long and complex affiliations from our Portuguese friends :-)

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -70,7 +70,16 @@
               \ref{chap:kirby-8}, \ref{chap:kvs-1}, \ref{chap:kvs-2},
               \ref{chap:logg-1}, \ref{chap:logg-2}, \ref{chap:logg-3}}
 
-\fenicsauthor{Nuno D. Lopes}{}{}{}{}
+\fenicsauthor{Nuno D. Lopes}
+             {ndl@ptmat.fc.ul.pt}
+             {ADEM, \'{A}rea Departamental de Matem\'{a}tica,
+              ISEL, Instituto Superior de Engenharia de Lisboa, Portugal \\
+              Departamento de Matem\'{a}tica, FCT--UNL,
+              Faculdade de Ci\^{e}ncias e Tecnologia da Universidade Nova de Lisboa, Portugal \\
+              CMAF, Centro de Matem\'{a}tica e Aplica\c{c}\~{o}es Fundamentais, Lisboa, Portugal}
+              Av. Prof. Gama Pinto, 2, 1649-003 Lisboa, Portugal
+              {This work is supported by ISEL, Instituto Superior de Engenharia de Lisboa.}
+              {Chapter \ref{chap:lopes}
 
 \fenicsauthor{Alf Emil L\o{}vgren}{}{}{}{}
 
@@ -112,7 +121,14 @@
               gratefully acknowledged.}
              {Chapter \ref{chap:nikbakht}}
 
-\fenicsauthor{Pedro Jorge Silva Pereira}{}{}{}{}
+\fenicsauthor{Pedro J. S. Pereira}
+             {ppereira@deq.isel.ipl.pt}
+             {ADEM, \'{A}rea Departamental de Matem\'{a}tica,
+              ISEL, Instituto Superior de Engenharia de Lisboa, Portugal \\
+              CEFITEC, Centro de F\'{i}sica e Investiga\c{c}\~ao Tecnol\'{o}gica, FCT--UNL,
+              Faculdade de Ci\^{e}ncias e Tecnologia da Universidade Nova de Lisboa, Portugal}
+             {}
+             {Chapter \ref{chap:lopes}
 
 \fenicsauthor{Johannes Ring}
              {johannr@simula.no}
@@ -153,7 +169,13 @@
 
 \fenicsauthor{Andy R. Terrel}{}{}{}{}
 
-\fenicsauthor{Lu{\'\i}s Trabucho}{}{}{}{}
+\fenicsauthor{Lu{\'\i}s Trabucho}
+             {trabucho@ptmat.fc.ul.pt}
+             {Departamento de Matem\'{a}tica, FCT--UNL,
+              Faculdade de Ci\^{e}ncias e Tecnologia da Universidade Nova de Lisboa, Portugal \\
+              CMAF, Centro de Matem\'{a}tica e Aplica\c{c}\~{o}es Fundamentais, Lisboa, Portugal}
+             {This work is partially supported by Funda\c{c}\~{a}o para a Ci\^{e}ncia e Tecnologia, Financiamento Base 2008-ISFL-1-209.}
+             {Chapter \ref{chap:lopes}
 
 \fenicsauthor{Kristian Valen-Sendstad}
              {kvs@simula.no}
