--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -79,7 +79,7 @@
               CMAF, Centro de Matem\'{a}tica e Aplica\c{c}\~{o}es Fundamentais, Lisboa, Portugal}
               Av. Prof. Gama Pinto, 2, 1649-003 Lisboa, Portugal
               {This work is supported by ISEL, Instituto Superior de Engenharia de Lisboa.}
-              {Chapter \ref{chap:lopes}
+              {Chapter \ref{chap:lopes}}
 
 \fenicsauthor{Alf Emil L\o{}vgren}{}{}{}{}
 
@@ -128,7 +128,7 @@
               CEFITEC, Centro de F\'{i}sica e Investiga\c{c}\~ao Tecnol\'{o}gica, FCT--UNL,
               Faculdade de Ci\^{e}ncias e Tecnologia da Universidade Nova de Lisboa, Portugal}
              {}
-             {Chapter \ref{chap:lopes}
+             {Chapter \ref{chap:lopes}}
 
 \fenicsauthor{Johannes Ring}
              {johannr@simula.no}
@@ -175,7 +175,7 @@
               Faculdade de Ci\^{e}ncias e Tecnologia da Universidade Nova de Lisboa, Portugal \\
               CMAF, Centro de Matem\'{a}tica e Aplica\c{c}\~{o}es Fundamentais, Lisboa, Portugal}
              {This work is partially supported by Funda\c{c}\~{a}o para a Ci\^{e}ncia e Tecnologia, Financiamento Base 2008-ISFL-1-209.}
-             {Chapter \ref{chap:lopes}
+             {Chapter \ref{chap:lopes}}
 
 \fenicsauthor{Kristian Valen-Sendstad}
              {kvs@simula.no}
