Add some missing refs.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,21 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@article{ErnGuermond2004,
+  title={Theory and Practice of Finite Elements},
+  author={A. Ern and J.-L. Guermond},
+  year={2004},
+  publisher={Springer-Verlag},
+}
+
+@article{Gockenbach2006,
+  title={Understanding and Implementing the Finite Element Method},
+  author={M. S. Gockenbach},
+  year={2006},
+  publisher={Society for Industrial and Applied Mathematics},
+}
+
+
 @article{KnepleyKarpeev2009,
   title={Mesh algorithms for {PDE} with {S}ieve {I}: {M}esh distribution},
   author={Knepley, M. G. and Karpeev, D. A.},
